done responsive catalog page

--- a/thuan/catalog-page/index.html
+++ b/thuan/catalog-page/index.html
@@ -50,8 +50,8 @@
                     </ul>
                 </nav>
                 <div class="icons">
-                    <a href="#"><img src="../assets/images/ic-search.svg" alt="ic-search"></a>
-                    <a href="#"><img src="../assets/images/ic-personal.svg" alt="ic-personal"></a>
+                    <a href="#"><img src="../assets/images/ic-search.svg" alt="ic-search" class="ic-search"></a>
+                    <a href="#"><img src="../assets/images/ic-personal.svg" alt="ic-personal" class="ic-personal"></a>
                     <div class="cart">
                         <a href="#">
                             <img src="../assets/images/ic-cart.svg" alt="ic-cart">
@@ -96,8 +96,14 @@
             <!-- GRID CONTENT -->
             <div class="grid-content">
                 <div class="arrange-btns">
-                    <img src="../assets/images/ic-arrange-1.svg" alt="ic-arrange-1" class="ic-arrange">
-                    <img src="../assets/images/ic-arrange-2.svg" alt="ic-arrange-2" class="ic-arrange">
+                    <div class="left-side-arrange">
+                        <img src="../assets/images/ic-filter.svg" alt="ic-filter" class="ic-filter">
+                        <span>Filter</span>
+                    </div>
+                    <div class="right-side-arrange">
+                        <img src="../assets/images/ic-arrange-1.svg" alt="ic-arrange-1" class="ic-arrange">
+                        <img src="../assets/images/ic-arrange-2.svg" alt="ic-arrange-2" class="ic-arrange">
+                    </div>
                 </div>
                 <!-- top grid -->
                 <div id="grid-item-cards">
@@ -208,12 +214,39 @@
                 <div class="bottom-img">
                     <img src="../assets/images/bottom-banner-image.png" alt="bottom-banner">
                 </div>
+                <div class="bottom-img-title">
+                    <h2>TURNTABLE COUCH</h2>
+                    <p>The archaic form of this table speaks for itself. It owes its unique identity to the feeling that
+                        it turns around its own axis. It is present in the room as a feature and fixed on its slim-line
+                        middle foot in solid wood.</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Newsletter Banner -->
     <section id="newsLetter" class="container">
+        <div class="newsLetter">
+            <img src="../assets/images/newsLetter-img.png" alt="newsLetter-img" class="newsLetter-img">
+            <div class="content">
+                <div class="content-title">
+                    <h3>Join Our Newsletter</h3>
+                    <span>Sign up for deals, new products and promotions</span>
+                </div>
+                <div class="form">
+                    <form action="">
+                        <img src="../assets/images/ic-email.svg" alt="ic-email">
+                        <input type="email" placeholder="Email address">
+                    </form>
+                    <button>
+                        <span>Sign Up</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section id="newsLetter-2">
         <div class="newsLetter">
             <img src="../assets/images/newsLetter-img.png" alt="newsLetter-img" class="newsLetter-img">
             <div class="content">
