--- a/thuan/home-page/index.html
+++ b/thuan/home-page/index.html
@@ -42,9 +42,9 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="../home-page/index.html">Home</a></li>
+                        <li><a href="#" class="active">Home</a></li>
                         <li><a href="#">Shop</a></li>
-                        <li><a href="#" class="active">Product</a></li>
+                        <li><a href="../catalog-page/index.html">Product</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </nav>
