--- a/thuan/catalog-page/index.html
+++ b/thuan/catalog-page/index.html
@@ -21,6 +21,29 @@
     <div class="add">
         <span>Free shipping over $50!</span>
     </div>
+    <section id="side-menu" class="side-menu">
+        <div class="top-section">
+            <div class="side-header">
+                <img src="../assets/images/ic-logo.svg" alt="ic-logo">
+                <img src="../assets/images/ic-close-menu.svg" alt="ic-close-menu" id="close-menu" class="close-menu">
+            </div>
+            <form action="" id="search-bar">
+                <img src="../assets/images/ic-search.svg" alt="ic-search" id="ic-search" class="ic-search">
+                <input type="search" placeholder="Search">
+            </form>
+            <nav>
+                <ul>
+                    <li><a href="../home-page/index.html">Home</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="../catalog-page/index.html">Product</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
+        <button>
+            <span>SIGN UP</span>
+        </button>
+    </section>
     <!-- Header Section -->
     <header id="header-section" class="container">
         <div class="header">
