--- a/thuan/catalog-page/index.html
+++ b/thuan/catalog-page/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
-    <script src="../main.js" defer></script>
+    <script src="./main.js" defer></script>
 
 </head>
 
@@ -44,6 +44,7 @@
             <span>SIGN UP</span>
         </button>
     </section>
+    <div id="overlay"></div>
     <!-- Header Section -->
     <header id="header-section" class="container">
         <div class="header">
@@ -61,7 +62,7 @@
             </div>
             <div class="header-nav">
                 <div class="header-nav-left">
-                    <img src="../assets/images/ic-menu.svg" alt="ic-menu" class="ic-menu">
+                    <img src="../assets/images/ic-menu.svg" alt="ic-menu" class="ic-menu" id="toggle-menu">
                     <img src="../assets/images/ic-logo.svg" alt="logo-page">
                 </div>
                 <nav>
