--- a/thuan/home-page/index.html
+++ b/thuan/home-page/index.html
@@ -20,7 +20,7 @@
     <div class="add">
         <span>Free shipping over $50!</span>
     </div>
-    <section id="side-menu-homepage" class="side-menu">
+    <section id="side-menu" class="side-menu">
         <div class="top-section">
             <div class="side-header">
                 <img src="../assets/images/ic-logo.svg" alt="ic-logo">
@@ -43,7 +43,7 @@
             <span>SIGN UP</span>
         </button>
     </section>
-    <div id="overlay-homepage"></div>
+    <div id="overlay"></div>
     <!-- Header Section -->
     <header id="header-section" class="container">
         <div class="header">
@@ -61,7 +61,7 @@
             </div>
             <div class="header-nav">
                 <div class="header-nav-left">
-                    <img src="../assets/images/ic-menu.svg" alt="ic-menu" class="ic-menu" id="toggle-menu-homepage">
+                    <img src="../assets/images/ic-menu.svg" alt="ic-menu" class="ic-menu" id="toggle-menu">
                     <img src="../assets/images/ic-logo.svg" alt="logo-page">
                 </div>
                 <nav>
