handle search bar

--- a/thuan/catalog-page/index.html
+++ b/thuan/catalog-page/index.html
@@ -56,8 +56,8 @@
                 </div>
 
                 <div class="shipping-btns">
-                    <button>Shipping</button>
-                    <button>Take away</button>
+                    <button id="btn-shipping" class="btn-active">Shipping</button>
+                    <button id="btn-take-away">Take away</button>
                 </div>
             </div>
             <div class="header-nav">
