--- a/thuan/home-page/index.html
+++ b/thuan/home-page/index.html
@@ -55,8 +55,8 @@
                 </div>
 
                 <div class="shipping-btns">
-                    <button>Shipping</button>
-                    <button>Take away</button>
+                    <button id="btn-shipping" class="btn-active">Shipping</button>
+                    <button id="btn-take-away">Take away</button>
                 </div>
             </div>
             <div class="header-nav">
@@ -73,7 +73,10 @@
                     </ul>
                 </nav>
                 <div class="icons">
-                    <a href="#"><img src="../assets/images/ic-search.svg" alt="ic-search" class="ic-search"></a>
+                    <div class="search-field">
+                        <img src="../assets/images/ic-search.svg" alt="ic-search" class="ic-search">
+                        <input type="search" id="searchInput" placeholder="Type something" >
+                    </div>
                     <a href="#"><img src="../assets/images/ic-personal.svg" alt="ic-personal" class="ic-personal"></a>
                     <div class="cart">
                         <a href="#">
