--- a/thuan/catalog-page/index.html
+++ b/thuan/catalog-page/index.html
@@ -74,7 +74,7 @@
                     </ul>
                 </nav>
                 <div class="icons">
-                    <a href="#"><img src="../assets/images/ic-search.svg" alt="ic-search" class="ic-search"></a>
+                    <img src="../assets/images/ic-search.svg" alt="ic-search" class="ic-search">
                     <a href="#"><img src="../assets/images/ic-personal.svg" alt="ic-personal" class="ic-personal"></a>
                     <div class="cart">
                         <a href="#">
@@ -82,6 +82,7 @@
                             <div class="count"><span>0</span></div>
                         </a>
                     </div>
+                
                 </div>
             </div>
 
