fixed files name index

--- a/thuan/index-catalog.html
+++ b/thuan/index-catalog.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog Page</title>
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
-    <script src="../main.js" defer></script>
+    <script src="./main.js" defer></script>
 
 </head>
 
@@ -24,18 +24,18 @@
     <section id="side-menu" class="side-menu">
         <div class="top-section">
             <div class="side-header">
-                <img src="../assets/images/ic-logo.svg" alt="ic-logo">
-                <img src="../assets/images/ic-close-menu.svg" alt="ic-close-menu" id="close-menu" class="close-menu">
+                <img src="./assets/images/ic-logo.svg" alt="ic-logo">
+                <img src="./assets/images/ic-close-menu.svg" alt="ic-close-menu" id="close-menu" class="close-menu">
             </div>
             <form action="" id="search-bar">
-                <img src="../assets/images/ic-search.svg" alt="ic-search" id="ic-search" class="ic-search">
+                <img src="./assets/images/ic-search.svg" alt="ic-search" id="ic-search" class="ic-search">
                 <input type="search" placeholder="Search">
             </form>
             <nav>
                 <ul>
-                    <li><a href="../home-page/index.html">Home</a></li>
+                    <li><a href="./index-home.html">Home</a></li>
                     <li><a href="#">Shop</a></li>
-                    <li><a href="../catalog-page/index.html">Product</a></li>
+                    <li><a href="./index-catalog.html">Product</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </nav>
@@ -50,9 +50,9 @@
         <div class="header">
             <div class="subhead">
                 <div class="address">
-                    <img src="../assets/images/ic-home.svg" alt="ic-home">
+                    <img src="./assets/images/ic-home.svg" alt="ic-home">
                     <span><strong>London</strong>, Brick Lane, 8</span>
-                    <img src="../assets/images/ic-drop-down.svg" alt="ic-drop-down">
+                    <img src="./assets/images/ic-drop-down.svg" alt="ic-drop-down">
                 </div>
 
                 <div class="shipping-btns">
@@ -62,23 +62,23 @@
             </div>
             <div class="header-nav">
                 <div class="header-nav-left">
-                    <img src="../assets/images/ic-menu.svg" alt="ic-menu" class="ic-menu" id="toggle-menu">
-                    <img src="../assets/images/ic-logo.svg" alt="logo-page">
+                    <img src="./assets/images/ic-menu.svg" alt="ic-menu" class="ic-menu" id="toggle-menu">
+                    <img src="./assets/images/ic-logo.svg" alt="logo-page">
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="../home-page/index.html">Home</a></li>
+                        <li><a href="./index-home.html">Home</a></li>
                         <li><a href="#">Shop</a></li>
                         <li><a href="#" class="active">Product</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </nav>
                 <div class="icons">
-                    <img src="../assets/images/ic-search.svg" alt="ic-search" class="ic-search">
-                    <a href="#"><img src="../assets/images/ic-personal.svg" alt="ic-personal" class="ic-personal"></a>
+                    <img src="./assets/images/ic-search.svg" alt="ic-search" class="ic-search">
+                    <a href="#"><img src="./assets/images/ic-personal.svg" alt="ic-personal" class="ic-personal"></a>
                     <div class="cart">
                         <a href="#">
-                            <img src="../assets/images/ic-cart.svg" alt="ic-cart">
+                            <img src="./assets/images/ic-cart.svg" alt="ic-cart">
                             <div class="count"><span>0</span></div>
                         </a>
                     </div>
@@ -91,15 +91,15 @@
     <!-- BREADCRUMS Chairs & Benches-->
     <section id="breadCrums" class="container">
         <div class="breadCrums">
-            <span><a href="../home-page/index.html">Home</a></span>
-            <img src="../assets/images/ic-arrow.svg" alt="ic-arrow">
+            <span><a href="./index-home.html">Home</a></span>
+            <img src="./assets/images/ic-arrow.svg" alt="ic-arrow">
             <span>Chairs & Benches</span>
         </div>
     </section>
     <!-- Catalog banner -->
     <section id="catalog-banner" class="container">
         <div class="catalog-banner">
-            <img src="../assets/images/catalog-baner-chairs-benches.png" alt="catalog-banner-img">
+            <img src="./assets/images/catalog-baner-chairs-benches.png" alt="catalog-banner-img">
             <h2>Chairs & Benches</h2>
         </div>
     </section>
@@ -122,12 +122,12 @@
             <div class="grid-content">
                 <div class="arrange-btns">
                     <div class="left-side-arrange">
-                        <img src="../assets/images/ic-filter.svg" alt="ic-filter" class="ic-filter">
+                        <img src="./assets/images/ic-filter.svg" alt="ic-filter" class="ic-filter">
                         <span>Filter</span>
                     </div>
                     <div class="right-side-arrange">
-                        <img src="../assets/images/ic-arrange-1.svg" alt="ic-arrange-1" class="ic-arrange">
-                        <img src="../assets/images/ic-arrange-2.svg" alt="ic-arrange-2" class="ic-arrange">
+                        <img src="./assets/images/ic-arrange-1.svg" alt="ic-arrange-1" class="ic-arrange">
+                        <img src="./assets/images/ic-arrange-2.svg" alt="ic-arrange-2" class="ic-arrange">
                     </div>
                 </div>
                 <!-- top grid -->
@@ -144,16 +144,16 @@
                                 </div>
                             </div>
                             <div class="card-item-img">
-                                <img src="../assets/images/item-img-1.png" alt="item-img" class="card-img">
+                                <img src="./assets/images/item-img-1.png" alt="item-img" class="card-img">
                             </div>
 
                             <div class="card-detail">
                                 <div class="star-rating">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
                                 </div>
 
                                 <h6 class="card-name">1.3 Chair</h6>
@@ -167,7 +167,7 @@
                 <div id="grid-content-2">
                     <div class="grid-card-1">
                         <div class="grid-card-img">
-                            <img src="../assets/images/novel-img-1.png" alt="item-img">
+                            <img src="./assets/images/novel-img-1.png" alt="item-img">
                         </div>
 
                         <div class="card-detail">
@@ -188,16 +188,16 @@
                                 </div>
                             </div>
                             <div class="card-item-img">
-                                <img src="../assets/images/item-img-1.png" alt="item-img" class="card-img">
+                                <img src="./assets/images/item-img-1.png" alt="item-img" class="card-img">
                             </div>
 
                             <div class="card-detail">
                                 <div class="star-rating">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
                                 </div>
 
                                 <h6 class="card-name">1.3 Chair</h6>
@@ -218,16 +218,16 @@
                                 </div>
                             </div>
                             <div class="card-item-img">
-                                <img src="../assets/images/item-img-1.png" alt="item-img" class="card-img">
+                                <img src="./assets/images/item-img-1.png" alt="item-img" class="card-img">
                             </div>
 
                             <div class="card-detail">
                                 <div class="star-rating">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
-                                    <img src="../assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
+                                    <img src="./assets/images/ic-stars.svg" alt="ic-star">
                                 </div>
 
                                 <h6 class="card-name">1.3 Chair</h6>
@@ -237,7 +237,7 @@
                     </div>
                 </div>
                 <div class="bottom-img">
-                    <img src="../assets/images/bottom-banner-image.png" alt="bottom-banner">
+                    <img src="./assets/images/bottom-banner-image.png" alt="bottom-banner">
                 </div>
                 <div class="bottom-img-title">
                     <h2>TURNTABLE COUCH</h2>
@@ -252,7 +252,7 @@
     <!-- Newsletter Banner -->
     <section id="newsLetter" class="container">
         <div class="newsLetter">
-            <img src="../assets/images/newsLetter-img.png" alt="newsLetter-img" class="newsLetter-img">
+            <img src="./assets/images/newsLetter-img.png" alt="newsLetter-img" class="newsLetter-img">
             <div class="content">
                 <div class="content-title">
                     <h3>Join Our Newsletter</h3>
@@ -260,7 +260,7 @@
                 </div>
                 <div class="form">
                     <form action="">
-                        <img src="../assets/images/ic-email.svg" alt="ic-email">
+                        <img src="./assets/images/ic-email.svg" alt="ic-email">
                         <input type="email" placeholder="Email address">
                     </form>
                     <button>
@@ -273,7 +273,7 @@
     </section>
     <section id="newsLetter-2">
         <div class="newsLetter">
-            <img src="../assets/images/newsLetter-img.png" alt="newsLetter-img" class="newsLetter-img">
+            <img src="./assets/images/newsLetter-img.png" alt="newsLetter-img" class="newsLetter-img">
             <div class="content">
                 <div class="content-title">
                     <h3>Join Our Newsletter</h3>
@@ -281,7 +281,7 @@
                 </div>
                 <div class="form">
                     <form action="">
-                        <img src="../assets/images/ic-email.svg" alt="ic-email">
+                        <img src="./assets/images/ic-email.svg" alt="ic-email">
                         <input type="email" placeholder="Email address">
                     </form>
                     <button>
@@ -295,7 +295,7 @@
     <!-- FOOTER -->
     <footer id="footer">
         <div class="footer-up">
-            <img src="../assets/images/ic-logo-white.svg" alt="ic-logo-white">
+            <img src="./assets/images/ic-logo-white.svg" alt="ic-logo-white">
             <div class="between">
                 <span>Design furniture Store</span>
             </div>
@@ -317,9 +317,9 @@
             </div>
 
             <div class="footer-below-right">
-                <img src="../assets/images/ic-instagram.svg" alt="ic-instagram">
-                <img src="../assets/images/ic-youtube.svg" alt="ic-youtube">
-                <img src="../assets/images/ic-facebook.svg" alt="ic-facebook">
+                <img src="./assets/images/ic-instagram.svg" alt="ic-instagram">
+                <img src="./assets/images/ic-youtube.svg" alt="ic-youtube">
+                <img src="./assets/images/ic-facebook.svg" alt="ic-facebook">
             </div>
         </div>
     </footer>
