--- a/thuan/index-home.html
+++ b/thuan/index-home.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
-    <script src="../main.js" defer></script>
+    <script src="./main.js" defer></script>
 </head>
 
 <body>
@@ -23,18 +23,18 @@
     <section id="side-menu" class="side-menu">
         <div class="top-section">
             <div class="side-header">
-                <img src="../assets/images/ic-logo.svg" alt="ic-logo">
-                <img src="../assets/images/ic-close-menu.svg" alt="ic-close-menu" id="close-menu" class="close-menu">
+                <img src="./assets/images/ic-logo.svg" alt="ic-logo">
+                <img src="./assets/images/ic-close-menu.svg" alt="ic-close-menu" id="close-menu" class="close-menu">
             </div>
             <form action="" id="search-bar">
-                <img src="../assets/images/ic-search.svg" alt="ic-search" id="ic-search" class="ic-search">
+                <img src="./assets/images/ic-search.svg" alt="ic-search" id="ic-search" class="ic-search">
                 <input type="search" placeholder="Search">
             </form>
             <nav>
                 <ul>
-                    <li><a href="../home-page/index.html">Home</a></li>
+                    <li><a href="./index-home.html">Home</a></li>
                     <li><a href="#">Shop</a></li>
-                    <li><a href="../catalog-page/index.html">Product</a></li>
+                    <li><a href="./index-catalog.html">Product</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </nav>
@@ -49,9 +49,9 @@
         <div class="header">
             <div class="subhead">
                 <div class="address">
-                    <img src="../assets/images/ic-home.svg" alt="ic-home">
+                    <img src="./assets/images/ic-home.svg" alt="ic-home">
                     <span><strong>London</strong>, Brick Lane, 8</span>
-                    <img src="../assets/images/ic-drop-down.svg" alt="ic-drop-down">
+                    <img src="./assets/images/ic-drop-down.svg" alt="ic-drop-down">
                 </div>
 
                 <div class="shipping-btns">
@@ -61,23 +61,23 @@
             </div>
             <div class="header-nav">
                 <div class="header-nav-left">
-                    <img src="../assets/images/ic-menu.svg" alt="ic-menu" class="ic-menu" id="toggle-menu">
-                    <img src="../assets/images/ic-logo.svg" alt="logo-page">
+                    <img src="./assets/images/ic-menu.svg" alt="ic-menu" class="ic-menu" id="toggle-menu">
+                    <img src="./assets/images/ic-logo.svg" alt="logo-page">
                 </div>
                 <nav>
                     <ul>
                         <li><a href="#" class="active">Home</a></li>
                         <li><a href="#">Shop</a></li>
-                        <li><a href="../catalog-page/index.html">Product</a></li>
+                        <li><a href="./index-catalog.html">Product</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </nav>
                 <div class="icons">
-                    <img src="../assets/images/ic-search.svg" alt="ic-search" class="ic-search">
-                    <a href="#"><img src="../assets/images/ic-personal.svg" alt="ic-personal" class="ic-personal"></a>
+                    <img src="./assets/images/ic-search.svg" alt="ic-search" class="ic-search">
+                    <a href="#"><img src="./assets/images/ic-personal.svg" alt="ic-personal" class="ic-personal"></a>
                     <div class="cart">
                         <a href="#">
-                            <img src="../assets/images/ic-cart.svg" alt="ic-cart">
+                            <img src="./assets/images/ic-cart.svg" alt="ic-cart">
                             <div class="count"><span>0</span></div>
                         </a>
                     </div>
@@ -103,7 +103,7 @@
             </div>
 
             <div class="hero-right">
-                <img src="../assets/images/hero-image.png" alt="hero-image">
+                <img src="./assets/images/hero-image.png" alt="hero-image">
             </div>
         </div>
 
@@ -115,7 +115,7 @@
             <div class="novel-container">
                 <div class="novel-item-left">
                     <div class="img-card">
-                        <img src="../assets/images/novel-img-1.png" alt="novel-img-1">
+                        <img src="./assets/images/novel-img-1.png" alt="novel-img-1">
                     </div>
                     <div class="novel-title">
                         <h6>BONDT – round</h6>
@@ -125,7 +125,7 @@
 
                 <div class="novel-items">
                     <div class="img-card">
-                        <img src="../assets/images/novel-img-2.png" alt="novel-img-2">
+                        <img src="./assets/images/novel-img-2.png" alt="novel-img-2">
                     </div>
                     <div class="novel-title">
                         <h6>1.3 Chair</h6>
@@ -135,7 +135,7 @@
 
                 <div class="novel-items">
                     <div class="img-card">
-                        <img src="../assets/images/novel-img-3.png" alt="novel-img-2">
+                        <img src="./assets/images/novel-img-3.png" alt="novel-img-2">
                     </div>
                     <div class="novel-title">
                         <h6>Kuyu Desk</h6>
@@ -145,7 +145,7 @@
 
                 <div class="novel-items">
                     <div class="img-card">
-                        <img src="../assets/images/novel-img-4.png" alt="novel-img-2">
+                        <img src="./assets/images/novel-img-4.png" alt="novel-img-2">
                     </div>
                     <div class="novel-title">
                         <h6>Neat Noon</h6>
@@ -155,7 +155,7 @@
 
                 <div class="novel-items">
                     <div class="img-card">
-                        <img src="../assets/images/novel-img-5.jpg" alt="novel-img-2">
+                        <img src="./assets/images/novel-img-5.jpg" alt="novel-img-2">
                     </div>
                     <div class="novel-title">
                         <h6>Denis Mahn</h6>
@@ -176,13 +176,13 @@
                             feature of this delicate.</p>
                     </div>
                     <div class="block-left-img">
-                        <img src="../assets/images/block-left-img-1.png" alt="block-left-img-1">
+                        <img src="./assets/images/block-left-img-1.png" alt="block-left-img-1">
                     </div>
                 </div>
 
                 <div class="block-left-bottom">
                     <div class="block-left-img">
-                        <img src="../assets/images/block-left-img-2.png" alt="block-left-img-2">
+                        <img src="./assets/images/block-left-img-2.png" alt="block-left-img-2">
                     </div>
                     <div class="block-title">
                         <h2>AD MIRE</h2>
@@ -193,7 +193,7 @@
             </div>
 
             <div class="block-right">
-                <img src="../assets/images/block-right-img.png" alt=".card-block-right-img">
+                <img src="./assets/images/block-right-img.png" alt=".card-block-right-img">
             </div>
         </div>
 
@@ -203,7 +203,7 @@
     <section id="turnTableCouch-section" class="container">
         <div class="turnTableCouch-section">
             <div class="turnTable-left-side">
-                <img src="../assets/images/turnTable-left-side-img.png" alt="turnTableCouch-img-1">
+                <img src="./assets/images/turnTable-left-side-img.png" alt="turnTableCouch-img-1">
             </div>
 
             <div class="turnTable-right-side">
@@ -218,7 +218,7 @@
                 </div>
 
                 <div class="turnTable-right-side-img">
-                    <img src="../assets/images/turnTable-right-side-img.png" alt="turnTable-right-side-img">
+                    <img src="./assets/images/turnTable-right-side-img.png" alt="turnTable-right-side-img">
                 </div>
             </div>
         </div>
@@ -226,7 +226,7 @@
     <!-- Newsletter Banner -->
     <section id="newsLetter" class="container">
         <div class="newsLetter">
-            <img src="../assets/images/newsLetter-img.png" alt="newsLetter-img" class="newsLetter-img">
+            <img src="./assets/images/newsLetter-img.png" alt="newsLetter-img" class="newsLetter-img">
             <div class="content">
                 <div class="content-title">
                     <h3>Join Our Newsletter</h3>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="form">
                     <form action="">
-                        <img src="../assets/images/ic-email.svg" alt="ic-email">
+                        <img src="./assets/images/ic-email.svg" alt="ic-email">
                         <input type="email" placeholder="Email address">
                     </form>
                     <button>
@@ -247,7 +247,7 @@
     </section>
     <section id="newsLetter-2">
         <div class="newsLetter">
-            <img src="../assets/images/newsLetter-img.png" alt="newsLetter-img" class="newsLetter-img">
+            <img src="./assets/images/newsLetter-img.png" alt="newsLetter-img" class="newsLetter-img">
             <div class="content">
                 <div class="content-title">
                     <h3>Join Our Newsletter</h3>
@@ -255,7 +255,7 @@
                 </div>
                 <div class="form">
                     <form action="">
-                        <img src="../assets/images/ic-email.svg" alt="ic-email">
+                        <img src="./assets/images/ic-email.svg" alt="ic-email">
                         <input type="email" placeholder="Email address">
                     </form>
                     <button>
@@ -269,7 +269,7 @@
     <!-- FOOTER -->
     <footer id="footer">
         <div class="footer-up">
-            <img src="../assets/images/ic-logo-white.svg" alt="ic-logo-white">
+            <img src="./assets/images/ic-logo-white.svg" alt="ic-logo-white">
             <div class="between">
                 <span>Design furniture Store</span>
             </div>
@@ -291,9 +291,9 @@
             </div>
 
             <div class="footer-below-right">
-                <img src="../assets/images/ic-instagram.svg" alt="ic-instagram">
-                <img src="../assets/images/ic-youtube.svg" alt="ic-youtube">
-                <img src="../assets/images/ic-facebook.svg" alt="ic-facebook">
+                <img src="./assets/images/ic-instagram.svg" alt="ic-instagram">
+                <img src="./assets/images/ic-youtube.svg" alt="ic-youtube">
+                <img src="./assets/images/ic-facebook.svg" alt="ic-facebook">
             </div>
         </div>
     </footer>
